--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -39,7 +39,6 @@
 </head>
 <body>
     <div class="container-fluid">
-
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom mb-4">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold" href="#">TeleAI</a>
@@ -49,6 +48,7 @@
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('orders') }}">Orders</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('reservations') }}">Reservations</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('customers') }}">Customers</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('calls') }}">Calls</a></li> <!-- New Calls Link -->
                     </ul>
 
                     {% if role == 'admin' %}
